i_1195 Remove deprecated Double constructor
PR Change request: Use Double.valueOf() instead of new Double().